example/secondfile/objects/DHStatus_Update_Deal_Hash_Details__c.object
<CustomObject>
    <fields>
        <fullName>API_Process_Error__c</fullName>
        <description>Keeps: Error code and description as reported bi the API call</description>
        <label>API Process Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Process_Status__c</fullName>
        <description>Keeps: In Progress,  Success and failure status of any API call associated with this object</description>
        <label>API Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DealHash Inquire API Sucessful</fullName>
                </value>
                <value>
                    <fullName>DealHash Inquire API Failed</fullName>
                </value>
                <value>
                    <fullName>DealHash Inquire API in Progress</fullName>
                </value>
                <value>
                    <fullName>Provisioning Initiation API Failed</fullName>
                </value>
                <value>
                    <fullName>Provisioning Initiation API Successful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ATT_Countersignature_Date__c</fullName>
        <label>ATT Countersignature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ATT_DD_Provisioning_Complete_Date__c</fullName>
        <label>ATT DD (Provisioning Complete Date)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ATT_Signature_Date__c</fullName>
        <label>ATT Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Access_Speed__c</fullName>
        <label>Access Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Identifier__c</fullName>
        <label>Billing Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelInFlightProvisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers OB call for Cancel In Flight Provisioning when set to True</description>
        <label>Cancel In Flight Provisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Flow_Type__c</fullName>
        <formula>IF(AND(MACD_Type__c = &quot;A&quot;,!Cancel_requested__c), &quot;AddSite&quot;, 

IF(AND(!Cancel_requested__c, 
AND(TEXT(RDS_Premise_Details_For_DHStatus__r.MACD_Change_Type__c) = &quot;CoS Change&quot;)),&quot;COS&quot;, 

IF(AND(RDS_Premise_Details_For_DHStatus__r.Transport_Type__c = &quot;SwitchedEthernet&quot;,!Cancel_requested__c, 
AND(TEXT(RDS_Premise_Details_For_DHStatus__r.MACD_Change_Type__c) = &quot;Port Speed Change&quot;)),&quot;SpChEth&quot;, 


IF(AND(RDS_Premise_Details_For_DHStatus__r.Unilink__c = &quot;true&quot;,!Cancel_requested__c, 
TEXT(RDS_Premise_Details_For_DHStatus__r.MACD_Change_Type__c) = &quot;VLAN Speed Change&quot;),&quot;SpChEth&quot;, 

IF(AND(MACD_Type__c = &quot;C&quot;,!Cancel_requested__c, OR(TEXT(RDS_Premise_Details_For_DHStatus__r.MACD_Change_Type__c) = &quot;UBB Add&quot;, TEXT(RDS_Premise_Details_For_DHStatus__r.MACD_Change_Type__c) = &quot;UBB Change&quot;, TEXT(RDS_Premise_Details_For_DHStatus__r.MACD_Change_Type__c) = &quot;UBB Remove&quot;)), &quot;UsageBasedBilling&quot;, 

IF(AND(MACD_Type__c = &quot;C&quot;,!Cancel_requested__c, TEXT(RDS_Premise_Details_For_DHStatus__r.MACD_Change_Type__c) = &quot;Port/Access Speed Change&quot;), TEXT(RDS_Premise_Details_For_DHStatus__r.Change_Flow_Type__c), 

IF(AND(MACD_Type__c = &quot;C&quot;,!Cancel_requested__c, TEXT(RDS_Premise_Details_For_DHStatus__r.MACD_Change_Type__c) = &quot;AddVlan&quot;), &quot;VLANLevelChange&quot;, 
IF(AND(MACD_Type__c = &quot;C&quot;,!Cancel_requested__c, TEXT(RDS_Premise_Details_For_DHStatus__r.MACD_Change_Type__c) = &quot;Disconnect Vlan&quot;), &quot;VLANLevelChange&quot;, 
IF(AND(MACD_Type__c = &quot;C&quot;,!Cancel_requested__c, TEXT(RDS_Premise_Details_For_DHStatus__r.MACD_Change_Type__c) = &quot;CoS Add&quot;), TEXT(RDS_Premise_Details_For_DHStatus__r.Change_Flow_Type__c), 
IF(AND(MACD_Type__c = &quot;C&quot;,!Cancel_requested__c, TEXT(RDS_Premise_Details_For_DHStatus__r.MACD_Change_Type__c) = &quot;CoS Remove&quot;), TEXT(RDS_Premise_Details_For_DHStatus__r.Change_Flow_Type__c), 
IF(AND(MACD_Type__c = &quot;D&quot;, Disconnect_Type__c = &quot;Soft Disconnect&quot;,!Cancel_requested__c),&quot;SoftDisconnect&quot;, 
IF(AND(MACD_Type__c = &quot;D&quot;, Disconnect_Type__c = &quot;Soft Cancel&quot;,!Cancel_requested__c),&quot;SoftDisconnectCancel&quot;, 
IF(AND(MACD_Type__c = &quot;D&quot;, Disconnect_Type__c = &quot;Hard Disconnect&quot;,!Cancel_requested__c),&quot;TotalDisconnect&quot;,IF(Cancel_requested__c,&quot;CancelInFlight&quot;,IF(Renewal_Contract__c,&quot;Renewal&quot;,&quot;&quot;)))))))))))))))</formula>
        <label>Change Flow Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Billing_Activation_2_EfCDate__c</fullName>
        <label>Circuit Billing Activation 2 EfC Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Billing_Activation_EffectiveDate__c</fullName>
        <label>Circuit Billing Activation EffectiveDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Competitive_Discounts_2_EfC_Date__c</fullName>
        <label>Circuit Competitive Discounts 2 EfC Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Competitive_Discounts_EfC_Date__c</fullName>
        <label>Circuit Competitive Discounts EfC Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Facility_Assignment_TimeReceived__c</fullName>
        <label>Circuit Facility Assignment Received?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Version__c</fullName>
        <formula>RDS_Premise_Details_For_DHStatus__r.Current_Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CushionTimeDays__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Cushion Time Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Edge_Router_IP_Address_CER__c</fullName>
        <label>Customer Edge Router IP Address (CER)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Requested_Due_Date__c</fullName>
        <formula>RDS_Premise_Details_For_DHStatus__r.Request_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_initiate_Provisioning__c</fullName>
        <label>Days to initiate Provisioning</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_start_Provisioning__c</fullName>
        <formula>IF(Renewal_Contract__c == true, 0, IF(TEXT( Provisioning_Status__c)!=NULL,0,((Premise_provision_due_days__c  -  CushionTimeDays__c)+ CreatedDate)- NOW()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to start Provisioning</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Hash_Created_By__c</fullName>
        <formula>RDS_Deal_Hash__r.CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Hash Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Hash_Name__c</fullName>
        <formula>RDS_Deal_Hash__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Hash Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demarc_Location__c</fullName>
        <label>Demarc Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disconnect_Type__c</fullName>
        <formula>Text(RDS_Premise_Details_For_DHStatus__r.Disconnect_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disconnect Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAD_Date__c</fullName>
        <description>DHStatus-ASR Details --&gt;
Service Order Due</description>
        <inlineHelpText>Service Order Due from DHStatus-ASR Details</inlineHelpText>
        <label>EAD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EVC_PON__c</fullName>
        <label>EVC PON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Access_Date_EVC_PON__c</fullName>
        <label>EAD (EVC PON)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Access_Date_UNI_PON__c</fullName>
        <label>EAD (UNI PON)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_FOC_Date_UNI_PON__c</fullName>
        <label>Expected FOC Date (UNI PON)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FOC_Date_Changed_EVC_PON__c</fullName>
        <label>FOC Date Changed? (EVC PON)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FOC_Received_Date_EVC_PON__c</fullName>
        <label>FOC Received Date (EVC PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOC_Received_Date__c</fullName>
        <description>When Status Record Type = FC then populate value from Update Date Time field on DHStatus-Access Service Request Status</description>
        <label>FOC Received Date(UNI PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOC_date_Changed__c</fullName>
        <label>FOC date Changed?(UNI PON)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_in_Effect_Date__c</fullName>
        <label>Facility in Effect Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Order_Accepted_EVC_PON__c</fullName>
        <label>Firm Order Accepted (EVC PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Order_Accepted_UNI_PON__c</fullName>
        <label>Firm Order Accepted (UNI PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Order_Sent_EVC_PON__c</fullName>
        <label>Firm Order Sent (EVC PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Order_Sent_UNI_PON__c</fullName>
        <label>Firm Order Sent (UNI PON)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_Deal_Hash_Number__c</fullName>
        <formula>RDS_Deal_Hash__r.GRID_Deal_Hash_Number__c</formula>
        <label>GRID Deal Hash Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRID_Premise_ID__c</fullName>
        <description>Formula for retrieving Grid Premise ID</description>
        <formula>RDS_Premise_Details_For_DHStatus__r.GRID_Premise_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GRID Premise ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instar_Order_Number__c</fullName>
        <label>Instar Order  Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProcessIdNotNull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsProcessIdNotNull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAN_IP_Address_Mask__c</fullName>
        <label>LAN IP Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN_IP_Address__c</fullName>
        <label>LAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Deal_Hash_Inquiry_Call__c</fullName>
        <description>Last Time DEal Hash information was received for this Premise.</description>
        <label>Last Deal Hash Inquiry Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MACD_Change_Type__c</fullName>
        <label>MACD Change Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <formula>RDS_Premise_Details_For_DHStatus__r.MACD_Type__c</formula>
        <label>MACD Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>Technical field required to obtain related Opportunity in Apex. Not required on Page Layouts.</description>
        <formula>CASESAFEID(RDS_Deal_Hash__r.Opportunity__c)</formula>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <formula>IF(RDS_Version__c &gt; 1, RDS_Premise_Details_For_DHStatus__r.MACD_Deal_Reg_Number__c, RDS_Deal_Hash__r.Opportunity__r.BID_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Ref_Number__c</fullName>
        <formula>RDS_Premise_Details_For_DHStatus__r.Customer_Project_Number_Copied_Value__c</formula>
        <inlineHelpText>Customer Project Number from RDS-Premise Details</inlineHelpText>
        <label>Order Ref Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Submitted_Date__c</fullName>
        <formula>RDS_Premise_Details_For_DHStatus__r.Customer_Purchase_Decision_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTA_Recieved__c</fullName>
        <label>PTA Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Billing_Activation_Effective_Date__c</fullName>
        <label>Port Billing Activation Effective Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Competitive_Discounts_EffectiveDate__c</fullName>
        <label>Port Competitive Discounts EffectiveDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Speed__c</fullName>
        <label>Port Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Address1__c</fullName>
        <label>Premise Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Premise_Address__c</fullName>
        <description>Field concatenates all address fields on Premise.
Is used in Provisioning Milestone Report.</description>
        <formula>RDS_Premise_Details_For_DHStatus__r.Address_Concatenated__c</formula>
        <label>Premise Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Friendly_Name__c</fullName>
        <formula>IF( AND((Premise_Number__c ==  RDS_Premise_Details_For_DHStatus__r.Premise_Number__c), NOT( ISNULL( RDS_Premise_Details_For_DHStatus__c) ))  ,  RDS_Premise_Details_For_DHStatus__r.Premise_Friendly_Name__c ,&apos;&apos;)</formula>
        <label>Premise Friendly Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Number__c</fullName>
        <label>Premise Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Request_Due_Date__c</fullName>
        <formula>RDS_Premise_Details_For_DHStatus__r.Request_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premise Request Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premise_provision_due_days__c</fullName>
        <formula>IF( NOT( ISBLANK( RDS_Premise_Details_For_DHStatus__r.Request_Due_Date__c ) ) &amp;&amp; NOT( ISBLANK( RDS_Premise_Details_For_DHStatus__r.Best_Available_Due_Date__c ) ) , CASE(MOD( RDS_Premise_Details_For_DHStatus__r.Best_Available_Due_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( RDS_Premise_Details_For_DHStatus__r.Request_Due_Date__c - RDS_Premise_Details_For_DHStatus__r.Best_Available_Due_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1)-1, 
1 , CASE( MOD( RDS_Premise_Details_For_DHStatus__r.Request_Due_Date__c - RDS_Premise_Details_For_DHStatus__r.Best_Available_Due_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1)-1, 
2 , CASE( MOD( RDS_Premise_Details_For_DHStatus__r.Request_Due_Date__c - RDS_Premise_Details_For_DHStatus__r.Best_Available_Due_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1)-1, 
3 , CASE( MOD( RDS_Premise_Details_For_DHStatus__r.Request_Due_Date__c - RDS_Premise_Details_For_DHStatus__r.Best_Available_Due_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1)-1, 
4 , CASE( MOD( RDS_Premise_Details_For_DHStatus__r.Request_Due_Date__c - RDS_Premise_Details_For_DHStatus__r.Best_Available_Due_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1)-1, 
5 , CASE( MOD( RDS_Premise_Details_For_DHStatus__r.Request_Due_Date__c - RDS_Premise_Details_For_DHStatus__r.Best_Available_Due_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0)-1, 
6 , CASE( MOD( RDS_Premise_Details_For_DHStatus__r.Request_Due_Date__c - RDS_Premise_Details_For_DHStatus__r.Best_Available_Due_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0)-1, 
999) 
+ 
(FLOOR(( RDS_Premise_Details_For_DHStatus__r.Request_Due_Date__c - RDS_Premise_Details_For_DHStatus__r.Best_Available_Due_Date__c )/7)*5),31 )</formula>
        <label>Premise provision due days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <label>Provisioning Process ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Edge_Router_IP_Address_PER__c</fullName>
        <label>Provider Edge Router IP Address (PER)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioning_Start_Time__c</fullName>
        <label>Provisioning Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Provisioning_Status__c</fullName>
        <label>Provisioning Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Provisioning Initiated</fullName>
                </value>
                <value>
                    <fullName>Provisioning Initiation Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RDSStatus__c</fullName>
        <description>Formula Field to get the RDS Status value on DH Status Object</description>
        <formula>TEXT(RDS_Deal_Hash__r.RDS_object_status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RDS Status(Cancel)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Deal_Hash__c</fullName>
        <label>RDS-Deal Hash</label>
        <referenceTo>Deal_Hash__c</referenceTo>
        <relationshipName>DHStatus_Update_Deal_Hash_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RDS_Premise_Details_For_DHStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RDS-Premise Details</label>
        <referenceTo>RDS_Premise_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Update Deal Hash Details</relationshipLabel>
        <relationshipName>DHStatus_Update_Deal_Hash_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDS_Received_Date__c</fullName>
        <formula>IF(RDS_Premise_Details_For_DHStatus__r.Renewal_Contract__c = true, RDS_Deal_Hash__r.RenewedQuote__r.Apttus_Proposal__Opportunity__r.RDS_Received_Last_Time_Stamp__c,IF(RDS_Version__c &gt; 1,RDS_Premise_Details_For_DHStatus__r.MACD_RDS_Received_Date__c,RDS_Deal_Hash__r.RDS_Received_Time_New__c))</formula>
        <label>RDS Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RDS_Review_Completed_Date__c</fullName>
        <formula>IF(RDS_Version__c &gt; 1, RDS_Premise_Details_For_DHStatus__r.MACD_RDS_Review_Completed_Date__c , RDS_Deal_Hash__r.Opportunity__r.RDS_Review_Complete_Last_Time_Stamp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RDS Review Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RDS_Version__c</fullName>
        <formula>RDS_Premise_Details_For_DHStatus__r.RDS_Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RDS Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Contract_Quote_Name__c</fullName>
        <formula>RDS_Deal_Hash__r.Renewal_Contract_Quote_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Contract Quote Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewed_Opportunity__c</fullName>
        <formula>CASESAFEID(Renewed_Quote__r.Apttus_Proposal__Opportunity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewed Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewed_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewed Quote</description>
        <label>Renewed Quote</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>DHStatus-Update Deal Hash Details</relationshipLabel>
        <relationshipName>DHStatus_Update_Deal_Hash_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_End_Customer_ID__c</fullName>
        <formula>RDS_Deal_Hash__r.SFDC_Account_End_Customer_ID_AEJ_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Account End Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <formula>RDS_Premise_Details_For_DHStatus__r.Service_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_status__c</fullName>
        <formula>IF(ISPICKVAL(RDS_Premise_Details_For_DHStatus__r.Site_Status__c,&apos;CANCELLED&apos;), IMAGE($Label.Red_InflightCancel,&quot;Cancelled&quot;,20,100), 
IF(ISPICKVAL(RDS_Premise_Details_For_DHStatus__r.Site_Status__c,&apos;PENDING_CANCEL&apos;), IMAGE($Label.Orange_Color,&quot;Pending Cancel&quot;,20,100),TEXT(RDS_Premise_Details_For_DHStatus__r.Site_Status__c)))</formula>
        <label>Site status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTU_Last_Attempted_Date__c</fullName>
        <label>TTU Last Attempted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_and_Turn_Up_Complete_Date__c</fullName>
        <label>Test and Turn Up Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_and_Turn_Up__c</fullName>
        <label>TTU Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Type__c</fullName>
        <formula>RDS_Premise_Details_For_DHStatus__r.Transport_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transport Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNI_PON__c</fullName>
        <label>UNI PON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_CER_IP_Address__c</fullName>
        <label>V4 CER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_LAN_Address_Mask__c</fullName>
        <label>V4 LAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_LAN_IP_Address__c</fullName>
        <label>V4 LAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_PER_IP_Address__c</fullName>
        <label>V4 PER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_WAN_Address_Mask__c</fullName>
        <label>V4 WAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_WAN_IP_Address__c</fullName>
        <label>V4 WAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_CER_IP_Address__c</fullName>
        <label>V6 CER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_LAN_Address_Mask__c</fullName>
        <label>V6 LAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_LAN_IP_Address__c</fullName>
        <label>V6 LAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_PER_IP_Address__c</fullName>
        <label>V6 PER IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_WAN_Address_Mask__c</fullName>
        <label>V6 WAN Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_WAN_IP_Address__c</fullName>
        <label>V6 WAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAN_IP_Address_Mask__c</fullName>
        <label>WAN IP Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAN_IP_Address__c</fullName>
        <label>WAN IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Action_List__c</fullName>
        <label>Work Action List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Flow_Name__c</fullName>
        <formula>if((RDS_Version__c=1 &amp;&amp; !Cancel_requested__c),&quot;NewStartProvision&quot;,&quot;MACDFlow&quot;)</formula>
        <label>Work Flow Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engineeringServiceOrder__c</fullName>
        <label>engineeringServiceOrder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Update Deal Hash Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GRID_Deal_Hash_Number__c</columns>
        <columns>GRID_Premise_ID__c</columns>
        <columns>Process_ID__c</columns>
        <columns>Order_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GRID_Deal_Hash_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Process_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>7/4/2017 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Provisioning_Today</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RDS_Deal_Hash__c</columns>
        <columns>Customer_Requested_Due_Date__c</columns>
        <columns>Change_Flow_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Flow_Type__c</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </filters>
        <filters>
            <field>Customer_Requested_Due_Date__c</field>
            <operation>equals</operation>
            <value>9/14/2017</value>
        </filters>
        <label>Provisioning Today</label>
    </listViews>
    <nameField>
        <displayFormat>DHS-{0000}</displayFormat>
        <label>DHStatus-RDS Update Deal Hash Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Update Deal Hash Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>